--- a/!style_minified.css
+++ b/!style_minified.css
@@ -9,19 +9,6 @@
     color: #393939;
 */
 
-.s-size {
-    /* font-size: 1.2vh; */
-    font-size: 16px;
-}
-.m-size {
-    /* font-size: 1.8vh; */
-    font-size: 24px;
-}
-.l-size {
-    /* font-size: 3.0vh; */
-    font-size: 40px;
-}
-
 body {
     font-family: "Roboto";
     margin: 0;
@@ -37,18 +24,16 @@ body {
     justify-content: center;
 }
 
-.presentation span {
-    color: #F76902;
-    font-size: 48px;
-    font-weight: 300;
-}
+    .presentation span {
+        color: #F76902;
+    }
 
-.presentation span b {
-    font-weight: 900;
-}
+    .presentation span b {
+        font-weight: 900;
+    }
 
 .startButton {
-    cursor: pointer;
+    cursor: cell;
 }
 
 .menu {
@@ -56,7 +41,6 @@ body {
     background-color: #393940;
     border-bottom: 3px solid #F76902;
     display: flex;
-    font-size: 24px;
     flex-direction: row;
     height: 50px;
     justify-content: space-evenly;
@@ -67,20 +51,20 @@ body {
     z-index: 10;
 }
 
-.fixedMenu {
-    position: fixed;
-    top: 0;
-    z-index: 100;
-}
+    .fixedMenu {
+        position: fixed;
+        top: 0;
+        z-index: 100;
+    }
 
-.menu div a {
-    color: #FFF;
-    text-decoration: none;
-}
+    .menu div a {
+        color: #FFF;
+        text-decoration: none;
+    }
 
-.menu div a:hover {
-    color: #F76902;
-}
+    .menu div a:hover {
+        color: #F76902;
+    }
 
 
 section {
@@ -94,7 +78,6 @@ section {
 .sectionTitle {
     border-bottom: 3px solid grey;
     color: #F76902;
-    font-size: 40px;
     margin: 175px 0;
 }
 
@@ -109,7 +92,7 @@ section {
 .aboutContainer {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 60%;
 }
 
     .bullets {
@@ -127,13 +110,8 @@ section {
         }
 
             .b-title {
-                font-size: 24px;
                 font-weight: 800;
                 padding: 15px 0 5px 0;
-            }
-
-            .b-description {
-                font-size: 16px;
             }
 
             .b-image {
@@ -157,13 +135,11 @@ section {
         }
 
             .sb-title {
-                font-size: 28px;
                 font-weight: 800;
                 padding: 20px 0 10px 0;
             }
 
             .sb-description {
-                font-size: 18px;
                 max-width: 450px;
             }
 
@@ -180,7 +156,7 @@ section {
             .skill {
                 background-color: #f5f5f5;
                 display: flex;
-                height: 30px;
+                height: 35px;
                 position: relative;
                 margin-bottom: 1vh;
                 width: 100%;
@@ -285,15 +261,9 @@ section {
         }
 
         .s-title {
-            font-size: 24pt;
             margin-bottom: 7%;
             margin-top: 7%;
-        }
-
-        .squareTextContainer div span {
-            font-size: 16pt;
-        }
-        
+        }        
 
 .hobby {
     align-items: center;
@@ -365,6 +335,21 @@ section {
     }
 
 
+    /* All Texts */
+
+    .presentation span b, .sectionTitle, .sb-title {
+        font-weight: 700;
+    }
+    
+     .b-title, .sb-title,  .skill span:first-child, .skill span:last-child, .s-title {
+        font-weight: 600;
+        letter-spacing: 0.09em;
+    }
+    
+    .presentation span, .menu,  .b-description, .squareTextContainer div span, .sb-description, .copyrightText {
+        font-weight: 500;
+    }
+
 /* Mobile */
 
 @media only screen and (max-width: 1000px) {
@@ -393,8 +378,64 @@ section {
     }
 }
 
-@media only screen and (max-width: 350px) {
-    .menu {
+@media only screen and (min-width: 1024px) {
+    
+
+    .presentation span, .sectionTitle {
+        font-size: 48px;
+    }
+
+    .sb-title {
+        font-size: 32px;
+    }
+
+    .menu, .b-title, .s-title {
+        font-size: 24px;
+    }
+
+    .b-description, .squareTextContainer div span, .sb-description, .copyrightText, .skill span:first-child, .skill span:last-child {
+        font-size: 18px;
+    }
+
+}
+
+
+@media only screen and (max-width: 1023px) {
+    .presentation span, .sectionTitle {
+        font-size: 46px;
+    }
+
+    .sb-title {
+        font-size: 30px;
+    }
+
+    .menu, .b-title, .s-title {
+        font-size: 22px;
+    }
+
+    .b-description, .squareTextContainer div span, .sb-description, .copyrightText, .skill span:first-child, .skill span:last-child {
         font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .presentation span, .sectionTitle {
+        font-size: 44px;
+    }
+
+    .sb-title {
+        font-size: 28px;
+    }
+    
+    .b-title, .s-title {
+        font-size: 20px;
+    }
+    
+        .menu {
+            font-size: 14px;
+        }
+
+    .b-description, .squareTextContainer div span, .sb-description, .copyrightText, .skill span:first-child, .skill span:last-child {
+        font-size: 14px;
     }
 }
