TODO scroll synchronized with navigation bar

--- a/!style_minified.css
+++ b/!style_minified.css
@@ -66,6 +66,10 @@ body {
         color: #F76902;
     }
 
+    .active {
+        color: #F76902 !important;
+    }
+
 
 section {
     margin-bottom: 1vh;
