--- a/!style_minified.css
+++ b/!style_minified.css
@@ -72,7 +72,7 @@ body {
 
 
 section {
-    margin-bottom: 1vh;
+    margin-bottom: 100px;
 }
 
 #presentation, #contacts {
@@ -154,6 +154,7 @@ section {
             }
 
         .skills {
+            padding-left: 25px;
             height: 25vh;
             width: 100%;
         }
@@ -201,7 +202,7 @@ section {
     align-items: center;
     background-color: #f5f5f5;
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 }
 
     /* Se con griglia */
@@ -212,6 +213,7 @@ section {
     flex-wrap: wrap;
     justify-content: center;
     margin-bottom: 150px;
+    max-width: 900px;
 }
 
     .square {
@@ -280,10 +282,10 @@ section {
 .backToTop {
     background-color: khaki;
     cursor: pointer;
-    height: 6vh;
+    height: 75px;
     position: absolute;
-    top: -3vh;
-    width: 6vh;
+    top: -37.5px;
+    width: 75px;
 }
 
     .backToTop img {
