--- a/!style_minified.css
+++ b/!style_minified.css
@@ -115,7 +115,7 @@ section {
 
             .b-title {
                 font-weight: 800;
-                padding: 15px 0 5px 0;
+                padding: 15px 0 10px 0;
             }
 
             .b-image {
@@ -145,6 +145,7 @@ section {
 
             .sb-description {
                 max-width: 450px;
+                line-height: 1.5em;
             }
 
             .sb-image {
@@ -280,12 +281,13 @@ section {
 /* BackToTop button */
 
 .backToTop {
-    background-color: khaki;
+    background-color: #F76902;
     cursor: pointer;
     height: 75px;
     position: absolute;
     top: -37.5px;
     width: 75px;
+    border-radius: 50%;
 }
 
     .backToTop img {
