--- a/!style_minified.css
+++ b/!style_minified.css
@@ -22,6 +22,7 @@ body {
     flex-direction: column;
     height: calc(100vh + 53px);
     justify-content: center;
+    background-color: #ffffe7;
 }
 
     .presentation span {
