--- a/!style_minified.css
+++ b/!style_minified.css
@@ -45,8 +45,8 @@ body {
     flex-direction: row;
     height: 50px;
     justify-content: space-evenly;
-    position: sticky;
     position: -webkit-sticky;
+    position: sticky;
     top: 0; 
     width: 100%;
     z-index: 10;
@@ -198,6 +198,28 @@ section {
                 width: 100%;
             }
 
+            .skills .skill:nth-child(1) .skillBar {
+                width: 80%;
+            }
+            .skills .skill:nth-child(2) .skillBar {
+                width: 80%;
+            }
+            .skills .skill:nth-child(3) .skillBar {
+                width: 50%;
+            }
+            .skills .skill:nth-child(4) .skillBar {
+                width: 90%;
+            }
+            .skills .skill:nth-child(5) .skillBar {
+                width: 60%;
+            }
+            .skills .skill:nth-child(6) .skillBar {
+                width: 40%;
+            }
+            .skills .skill:nth-child(7) .skillBar {
+                width: 40%;
+            }
+
 /* Projects and Hobby Section */
 
 .projects {
@@ -254,6 +276,7 @@ section {
         }
 
         .squareTextContainer:hover {
+            -webkit-backdrop-filter: blur(5px);
             backdrop-filter: blur(5px);
             opacity: 1;
         }
