--- a/!style_minified.css
+++ b/!style_minified.css
@@ -1,4 +1,7 @@
 @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
+@keyframes grayscaleIn {from {filter: grayscale(100%);} to {filter: none;}}
+@keyframes grayscaleOut {from {filter: none} to {filter: grayscale(100%);}}
+
 
 body {
     font-family: "Roboto";
@@ -354,6 +357,13 @@ section {
             align-items: center;
             background-color: #FFF;
             border-radius: 50%;
+            filter: grayscale(100%);
+            animation: grayscaleOut 0.5s;
+        }
+
+        .contact:hover {
+            animation: grayscaleIn 0.5s;
+            animation-fill-mode: forwards;
         }
 
         .contact a {
