--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -29,7 +29,67 @@ mat-list-item {
     width: 250px;
 }
 
-.square img {
-    height: 300px;
-    width: 300px;
+.square {
+    width: 200px;
+    height: 200px;
+}
+
+.contact {
+    width: 75px;
+    height: 75px;
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.view {
+  position: relative;
+  overflow: hidden;
+  cursor: default;
+}
+
+.view img {
+  position: relative;
+  display: block;
+}
+
+.view .mask {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-attachment: fixed;
+}
+
+.overlay .mask {
+  opacity: 0;
+  -webkit-transition: all .4s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+
+.overlay .mask:hover {
+  opacity: 1;
+}
+
+.flex-center {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.rgba-red-strong {
+  background-color: rgba(244,67,54,0.7);
 }
