--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -91,7 +91,7 @@ mat-list-item {
 }
 
 .rgba-red-strong {
-  background-color: rgba(244,67,54,0.7);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .progress {
