--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
 <section id="about">
   <p class="centered-text" style="width: 100%;">About</p>
   <div class="col-md-10 offset-md-1">
-    <div fxLayout="row" fxLayoutAlign="space-evenly start">
+    <div fxLayout="row" fxLayoutAlign="space-evenly start" class="bullets">
       <figure *ngFor="let bullet of bullets" fxLayout="column" fxLayoutAlign="center center" class="bullet">
         <img loading="lazy" src="{{bullet.image}}" alt="{{bullet.image}} image" title="speed image">
         <figcaption class="centered-text">
@@ -24,13 +24,13 @@
       </figure>
     </div>
     <hr>
-    <div>
-      <figure fxLayout="column" fxFlex="50" class="special-bullet">
+    <div class="specialBullet-skills">
+      <figure fxLayout="column" class="special-bullet">
         <img class="col-md-8 offset-md-4" loading="lazy" src="{{specialBullet.image}}" alt="me image" title="me image">
         <span class="col-md-8 offset-md-2 centered-text">{{specialBullet.title}}</span>
         <span class="col-md-8 offset-md-2">{{specialBullet.description}}</span>
       </figure>
-      <div fxLayout="column" fxFlex="50">
+      <div fxLayout="column">
         <div *ngFor="let skill of skills" class="progress">
           <p>{{skill.name}}</p>
           <div class="progress-bar" role="progressbar"[ngStyle]="{'width': skill.value + '%'}">{{skill.value}}%</div>
@@ -47,10 +47,8 @@
   <div class="col-md-10 offset-md-1" fxLayout="row" fxLayoutAlign="space-evenly start">
     <figure class="square view overlay" *ngFor="let project of projects">
       <img class="img-fluid" loading="lazy" src="{{project.image}}" alt="{{project.title}} project" title="{{project.title}} project">
-      <div class="mask flex-center rgba-red-strong">
-        <ul *ngIf="project.languages">
-          <li *ngFor="let language of project.languages">{{language}}</li>
-        </ul>
+      <div class="mask flex-center rgba-red-strong white-text column-direction">
+        <figcaption *ngFor="let language of project.languages">{{language}}</figcaption>
       </div>
     </figure>
   </div>
@@ -63,7 +61,7 @@
   <div class="col-md-10 offset-md-1" fxLayout="row wrap" fxLayoutAlign="space-evenly start">
     <figure class="square view overlay" *ngFor="let hobby of hobbies">
       <img class="img-fluid" loading="lazy" src="{{hobby.image}}" alt="{{hobby.title}}" title="{{hobby.title}}">
-      <div class="mask flex-center rgba-red-strong">
+      <div class="mask flex-center rgba-red-strong white-text column-direction">
         <figcaption>{{hobby.title}}</figcaption>
       </div>
     </figure>
