--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     padding: 0 !important;
+    font-family: Roboto;
 }
 
 .fixedMenu {
@@ -13,3 +14,24 @@ body {
 .left-align-text { text-align: left; }
 .centered-text { text-align: center; }
 .right-align-text { text-align: right; }
+.white-text { color: #fff; }
+
+.column-direction { flex-direction: column; }
+
+section p {
+    font-size: large;
+}
+
+@media screen and (max-width: 768px) {
+    .bullets {
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: center !important;
+    }
+    .specialBullet-skills {
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: center !important;
+    }
+
+}
