--- a/src/assets/styles/utils.css
+++ b/src/assets/styles/utils.css
@@ -21,9 +21,15 @@
     justify-content: center;
     height: 100%;
 }
-  
+
 body {
     margin: 0;
     padding: 0 !important;
     font-family: Roboto;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
